@@ -5,6 +5,8 @@ Name[es]=Motor NMM
 Name[et]=NMM mootor
 Name[fr]=Moteur NMM
 Name[pt]=Motor NMM
+Name[ru]=NMM
+Name[sl]=Pogon NMM
 Name[sv]=NMM-gränssnitt
 Name[ta]=NMM பொறி
 Name[xx]=xxNMM Enginexx
@@ -17,6 +19,8 @@ Comment[fr]=module AmaroK
 Comment[nl]=amaroK-plugin
 Comment[pt]='Plugin' para o amaroK
 Comment[pt_BR]=Plug-in do amaroK
+Comment[ru]=модуль amaroK
+Comment[sl]=Vstavek za amaroK
 Comment[sv]=Insticksprogram för amaroK
 Comment[ta]=amaroK  சொருகி
 Comment[xx]=xxamaroK pluginxx
@@ -26,6 +30,6 @@ X-KDE-amaroK-plugintype=engine
 X-KDE-amaroK-authors=Max Howell
 X-KDE-amaroK-email=max.howell@methylblue.com
 X-KDE-amaroK-version=1
-X-KDE-amaroK-framework-version=1
+X-KDE-amaroK-framework-version=2
 
 
