@@ -30,6 +30,9 @@ class KLibrary;
 class PluginManager
 {
     public:
+        /** Bump this number whenever the plugin framework gets incompatible with older versions */
+        static const int FrameworkVersion = 2;
+        
         /**
          * It will return a list of services that match your
          * specifications.  The only required parameter is the service
